--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>vivek-portfolio</title>
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/nornalize.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/nornalize.css">
     <link rel="stylesheet" href="./css/font-root-style/general-sans.css" />
     <link rel="stylesheet" href="./css/font-root-style/okinesans.css" />
     <link rel="stylesheet" href="./css/font-root-style/satoshi.css" />
