--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
       Hello, I'm Vivek Sharma, based in Uttar Pradesh, India. With a deep
       passion for technology, I'm on a quest to craft innovative solutions
       in the realms of Automation and Backend Development. But that's not
-      all; I've got a keen interest in the fascinating world of Blockchain.
+      all;
       As a motivated and enthusiastic newcomer to the industry, I bring not
       just technical skills but also a strong sense of self-discipline and a
       collaborative spirit.
